feat: add variadic template logger

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -2,3 +2,8 @@ add_executable(test_graph test_graph.cpp)
 target_link_libraries(test_graph pthread)
 
 add_executable(test_any test_any.cpp)
+
+add_executable(test_vtlogger test_vtlogger.cpp)
+
+add_executable(test_type_deduction type_deduction.cpp)
+
